--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Sketch.JS Demo | Filip Danic</title>
-	<link rel="stylesheet" type="text/css" href="css/canvas_style.css">
+	<link rel="stylesheet" type="text/css" href="./css/canvas_style.css">
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
-	<script type="text/javascript" src="js/sketch.js"></script>
+	<script type="text/javascript" src="./js/sketch.js"></script>
 	<!-- Author: Danic Filip, danicfilip.com -->
 </head>
 
