--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Sketch.JS Demo | Filip Danic</title>
 	<link rel="stylesheet" type="text/css" href="./css/canvas_style.css">
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 	<script type="text/javascript" src="./js/sketch.js"></script>
 	<!-- Author: Danic Filip, danicfilip.com -->
 </head>
